fix: llm provider problems
